put secret in frontend
intend to conceal, somehow

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,11 +24,11 @@ section b {
   color: gray;
 }
 #legs:last-child {
-transform: rotate(-25deg);
+/* transform: rotate(-25deg); */
 border: none;
 }
 #legs:nth-child(2){
-  transform: rotate(25deg);
+  /* transform: rotate(25deg); */
 }
 form {
   margin-bottom: 20%;
@@ -71,4 +71,16 @@ button {
   font-size: 1.2em;
   margin-right: 2%;
 }
- 
+.secretword p b {
+  display: inline;
+  letter-spacing: 4px;
+}
+.conceal {
+  /* position: relative;
+  left: 999999px; */
+  text-decoration: underline;
+}
+.reveal {
+  /* position: relative;
+  left: 0; */
+}
