--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,9 @@ main {
   flex-grow: 1;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: rgba(220, 220, 220, 0.22);
 }
 .parts b {font-size: 4em;}
 section ul {
@@ -72,7 +74,7 @@ button {
   margin-right: 2%;
 }
 .secretword ul li {
-  display: inline;
+  display: inline-block;
   letter-spacing: .15em;
   margin: 0 .25em;
   text-align: center;
@@ -80,10 +82,12 @@ button {
   border-bottom: 3px solid gray;
   width: 50px;
 }
-.conceal {
-  /* position: relative;
-  left: 999999px; */
-  background-color: gray;
+li.conceal {
+  border-bottom: 3px solid gray;
+}
+.conceal b {
+  position: relative;
+  left: -999999px; 
 }
 .reveal {
   /* position: relative;
