--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 .wrap {
   margin: 0 auto;
-  /* background: pink; */
-  width: 79%;
+  width: 59%;
 }
 h1 {
   transform: rotate(-90deg);
@@ -17,8 +16,8 @@ main {
   display: -ms-flexbox; 
 	display: -webkit-flex;
 	flex-flow: column nowrap;
-  min-height: 100%;
-  width: 55%;
+  width: 10%;
+  margin-left: 44.6044711951849%; 
   
 }
 canvas {
@@ -48,6 +47,11 @@ border: none;
 }
 
 /* Secret word: */
+.secretword {
+  margin-top: 1em;
+  margin-bottom: 1.2em;
+ margin-left: 14%;
+}
 
 section ul {
   display: -ms-flexbox;
@@ -56,6 +60,13 @@ section ul {
   width: 100%;
   font-size: 4em;
   color: gray;
+  margin: .5em auto;  
+}
+section ul:first-child {
+  text-transform: uppercase;
+}
+section ul li {
+  line-height: 1.3em;
 }
 li[class^="reveal"]+b {
   position: relative;
@@ -71,7 +82,8 @@ margin: 0 auto;
   display: -ms-flexbox; 
 	display: -webkit-flex;
 	flex-flow: row;
-  max-width: 50%;
+  max-width: 65%;
+  margin-left: 17%;
   letter-spacing: 6px;
 }
 .kr1 p, .kr2 p, .kr3 p {
@@ -92,8 +104,8 @@ background-color: rgba(135, 219, 132, 0.479);
 }
 .kr2 {
   /* max-width: 70%; */
-  margin: o auto;
-  margin-left: 4.2%;
+  /* margin: o auto;
+  margin-left: 4.2%; */
 }
 
 button {
@@ -171,4 +183,27 @@ p[class^="fail"] {
 }
 .show {
   display: inline-block;
+}
+@media (max-width: 1240px) {
+  .wrap { 
+    width: 98%;
+  }
+  .keyboard {
+  max-width: 100%;
+  }
+  .kr1 p, .kr2 p, .kr3 p {
+    max-width: 98%;
+    margin-left: 2%;
+  }
+  .secretword {
+    margin-left: 4%;
+  }
+}
+@media (max-width: 780px) {
+  .keyboard {
+    width: 100%;
+    margin: 10px -127px;
+    }
+
+
 }
