--- a/styles/style.css
+++ b/styles/style.css
@@ -1,97 +1,105 @@
+body {
+  background-color: #fff;
+  background: url("../img/hangman.svg") no-repeat;
+  background-position-x: 58px;
+  background-position-y: 0;
+}
+
 .wrap {
   margin: 0 auto;
   width: 59%;
+  background-color: rgba(255, 255, 255, 0.671);
 }
+
 h1 {
   transform: rotate(-90deg);
   position: absolute;
-  top: 10%;
-  left: 4%;
+  top: 13%;
+  left: 1%;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 3em;
+  letter-spacing: .25em;
   text-align: right;
   color: rgb(134, 9, 9);
 }
+
 main {
   display: flex;
-  display: -ms-flexbox; 
-	display: -webkit-flex;
-	flex-flow: column nowrap;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  flex-flow: column nowrap;
   width: 10%;
-  margin-left: 44.6044711951849%; 
-  
+  margin-left: 44.6044711951849%;
 }
-canvas {
-  border: 2px solid gray;
-}
+
 .b-parts {
   display: flex;
   flex-grow: 1;
   align-items: center;
   justify-content: center;
-  /* border: 1px solid black; */
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Laila', serif;
   color: rgba(220, 220, 220, 0.22);
+  font-size: 2em;
 }
-.parts b {font-size: 4em;}
 
-#legs:last-child {
-/* transform: rotate(-25deg); */
-border: none;
-}
-#legs:nth-child(2){
-  /* transform: rotate(25deg); */
-}
- form {/* remove TBD */
-  margin-bottom: 20%;
-  flex-wrap: wrap;
-}
 
 /* Secret word: */
+
 .secretword {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin-top: 1em;
   margin-bottom: 1.2em;
- margin-left: 14%;
+  margin-left: 14%;
 }
 
 section ul {
   display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
+  display: -webkit-flex;
+  display: flex;
   width: 100%;
   font-size: 4em;
   color: gray;
-  margin: .5em auto;  
+  margin: .5em auto;
 }
+
 section ul:first-child {
   text-transform: uppercase;
 }
+
 section ul li {
   line-height: 1.3em;
 }
+
 li[class^="reveal"]+b {
   position: relative;
   left: 0;
 }
 
 .keyboard {
-max-width: 89%;
-margin: 0 auto;
+  max-width: 89%;
+  margin: 0 auto;
 }
-.kr1, .kr2, .kr3 {
+
+.kr1,
+.kr2,
+.kr3 {
   display: flex;
-  display: -ms-flexbox; 
-	display: -webkit-flex;
-	flex-flow: row;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  flex-flow: row;
   max-width: 65%;
   margin-left: 17%;
   letter-spacing: 6px;
 }
-.kr1 p, .kr2 p, .kr3 p {
+
+.kr1 p,
+.kr2 p,
+.kr3 p {
   font-family: Courier New, Courier, monospace;
   font-weight: 700;
-  font-size:1.2em;
+  font-size: 1.2em;
   border: 2px dashed #C2c2c2;
-  border-radius:8px; 
+  border-radius: 8px;
   padding: 1em;
   display: flex;
   flex-grow: 1;
@@ -99,13 +107,20 @@ margin: 0 auto;
   justify-content: center;
   line-height: normal;
 }
-.kr1 p:hover, .kr2 p:hover, .kr3 p:hover, button:hover {
-background-color: rgba(135, 219, 132, 0.479);
+
+.kr1 p:hover,
+.kr2 p:hover,
+.kr3 p:hover,
+button:hover {
+  background-color: rgba(135, 219, 132, 0.479);
 }
+
 .kr2 {
-  /* max-width: 70%; */
-  /* margin: o auto;
-  margin-left: 4.2%; */
+  margin-left: 20.019074%;
+}
+
+.kr3 {
+  margin-left: 22.019074%;
 }
 
 button {
@@ -113,6 +128,9 @@ button {
   border-radius: 8px;
   font-size: 1.2em;
   margin-right: 2%;
+}
+.try-again {
+  margin-left: 34.952908%;
 }
 .secretword ul li {
   display: inline-block;
@@ -123,38 +141,57 @@ button {
   border-bottom: 3px solid gray;
   width: 50px;
 }
+
 li.conceal {
   border-bottom: 3px solid gray;
 }
+
 .conceal b {
   position: relative;
-  left: -999999px; 
+  left: -999999px;
 }
+
 .reveal {
   position: relative;
   left: 0;
 }
+
 b.reveal {
   color: rgb(134, 9, 9);
-transition: 2000;  
+  transition: 2000;
 }
+
 b[class^="reveal"] {
   position: relative;
   left: 0;
-  color: rgb(134, 9, 9); 
+  color: rgb(134, 9, 9);
 }
 
 p[class^="fail"] {
   background-color: rgba(150, 83, 91, 0.479);
 }
-.clear {
+
+.clear-away {
   background-color: #fff;
 }
-.b-parts b{
+
+.b-parts b {
   position: relative;
   font-weight: 700;
   font-size: 3.5em;
+  margin: -19px 0;
 }
+
+#head b:first-child {
+  transform: rotate(180deg);
+  margin-bottom: -30px;
+}
+
+#torso b:nth-child(2),
+#torso b:nth-child(1) {
+  letter-spacing: -12px;
+}
+
 .b-parts b .text-wrapper {
   position: relative;
   display: inline-block;
@@ -163,35 +200,43 @@ p[class^="fail"] {
   padding-bottom: 0.1em;
   overflow: hidden;
 }
+
 .b-parts b .letter {
   transform-origin: 50% 100%;
   display: inline-block;
   line-height: 1em;
 }
+
 #dialog {
-  position: relative;
-  top: 50%;
-  margin: 0 auto;
   font-size: 1.2em;
+  width: 47%;
+  margin: 0 auto;
 }
+
 #dialog .dialog-msg {
-  outline: 2px solid red;
+  border-radius: 8px;
+  text-align: center;
   background-color: pink;
 }
+
 .hidden {
   display: none;
 }
+
 .show {
   display: inline-block;
 }
+
 @media (max-width: 1240px) {
-  .wrap { 
+  .wrap {
     width: 98%;
   }
   .keyboard {
-  max-width: 100%;
+    max-width: 100%;
   }
-  .kr1 p, .kr2 p, .kr3 p {
+  .kr1 p,
+  .kr2 p,
+  .kr3 p {
     max-width: 98%;
     margin-left: 2%;
   }
@@ -199,11 +244,10 @@ p[class^="fail"] {
     margin-left: 4%;
   }
 }
+
 @media (max-width: 780px) {
   .keyboard {
     width: 100%;
     margin: 10px -127px;
-    }
-
-
+  }
 }
