--- a/styles/style.css
+++ b/styles/style.css
@@ -249,6 +249,12 @@ p[class^="fail"] {
     margin: 10px -127px;
   }
 }
+
+/* social sharing */
+#share {
+  margin-top: 1.3em; 
+}
+
 .jssocials-share {
   margin: 2.3em 0.6em 0.3em 0;
 }
